fixed font-size too large on block headers

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -113,7 +113,7 @@ html {
     padding: 1.3em;
     margin-bottom: 1.4em;
     .block-title {
-      font-size: 167%;
+      font-size: 150%;
       font-weight: bold;
       @include title-banner;
     }
